--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<html lang="en">,
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Kenneth Lu Diaz">
 
-    <title>Document</title>
+    <title>Kenneth Lu Diaz</title>
     <meta name="og:title" content="title">
 
     <meta name="og:site_name" content="">
@@ -12,7 +12,7 @@
 
 
 
-    <link rel="stylesheet" href="./style/main.css">
+    <link rel="stylesheet" href="styles/main.css">
     <script src="" defer></script>
 
     <meta name="description" content="">
@@ -27,10 +27,10 @@
     <nav class="nav">
         <ul class="nav-list">
             <li class="nav-item">
-                <a class="nav-link">Portfolio</a>
+                <a class="nav-link" href="#">Portfolio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link">Resume</a>
+                <a class="nav-link" href="Kenneth-Lu-Diaz-RESUME.pdf" target="_blank">Resume</a>
             </li>
         </ul>
     </nav>
