Added background image

--- a/index.html
+++ b/index.html
@@ -39,10 +39,14 @@
 <body>
     <main>
         <div class="landing">
-            <h1 class="name">Kenneth Lu Diaz</h1>
-            <button class="landing-button">></button>
-            <p class="landing-info text-1"></p>
-            <p class="landing-info text-2"></p>
+            <div class="landing-content">
+                <h1 class="name">Kenneth Lu Diaz</h1>
+                <button class="landing-button">></button>
+                <section class="landing-info">
+                    <p class="text-1"></p>
+                    <p class="text-2"></p>
+                </section>
+            </div>
         </div>
     </main>
 </body>
