--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <meta name="og:image" content="">
     <meta name="og:type" content="">
     <link rel="shortcut icon" href="" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <header class="header">
     <nav class="nav">
@@ -32,21 +33,25 @@
             <li class="nav-item">
                 <a class="nav-link" href="Kenneth-Lu-Diaz-RESUME.pdf" target="_blank">Resume</a>
             </li>
+        
+            <!-- <li class="external-item"> 
+                <a href="" class="external-link fa fa-github"></a>
+            </li>
+            <li class="external-item"> 
+                <a href="" class="external-link fa fa-gmail"></a>
+            </li> -->
         </ul>
     </nav>
-    <ul class="external-links"></ul>
 </header>
 <body>
     <main>
         <div class="landing">
-            <div class="landing-content">
-                <h1 class="name">Kenneth Lu Diaz</h1>
-                <button class="landing-button">></button>
-                <section class="landing-info">
-                    <p class="text-1"></p>
-                    <p class="text-2"></p>
-                </section>
-            </div>
+            <h1 class="name">Kenneth Lu Diaz</h1>
+            <button class="landing-btn">></button>
+            <section class="landing-info">
+                <p class="text-1"></p>
+                <p class="text-2"></p>
+            </section>
         </div>
     </main>
 </body>
