Started portfolio section

--- a/index.html
+++ b/index.html
@@ -50,8 +50,15 @@
             <button class="landing-btn">></button>
             <section class="landing-info">
                 <p class="text-1"></p>
-                <p class="text-2"></p>
             </section>
+        </div>
+        <div class="portfolio">
+            <h2 class="projects">
+                My Projects
+            </h2>
+            <div class="project-container">
+                
+            </div>
         </div>
     </main>
 </body>
