--- a/index.html
+++ b/index.html
@@ -56,9 +56,11 @@
             <h2 class="projects">
                 My Projects
             </h2>
-            <div class="project-container">
-                
-            </div>
+            <a class="project-container" target="_blank" href="photographyMocksite/index.html">
+                <div class="portfolio-image"></div>
+                <h3 class="portfolio-title">Photography Mocksite</h3>
+                <p class="portfolio-description">This is a mock landing page for a photographer's portfolio.</p>
+            </a>
         </div>
     </main>
 </body>
