Added portfolio image

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 <header class="header">
     <nav class="nav">
         <ul class="nav-list">
-            <li class="nav-item">
+            <li class="nav-item portfolio-link">
                 <a class="nav-link" href="#">Portfolio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="Kenneth-Lu-Diaz-RESUME.pdf" target="_blank">Resume</a>
+                <a class="nav-link resume-link" href="Kenneth-Lu-Diaz-RESUME.pdf" target="_blank">Resume</a>
             </li>
         
             <!-- <li class="external-item"> 
@@ -53,13 +53,13 @@
             </section>
         </div>
         <div class="portfolio">
-            <h2 class="projects">
+            <h2 class="portfolio-title">
                 My Projects
             </h2>
             <a class="project-container" target="_blank" href="photographyMocksite/index.html">
-                <div class="portfolio-image"></div>
-                <h3 class="portfolio-title">Photography Mocksite</h3>
-                <p class="portfolio-description">This is a mock landing page for a photographer's portfolio.</p>
+                <div class="project-image"></div>
+                <h3 class="project-title">Photography Mocksite</h3>
+                <p class="project-description">This is a mock landing page for a photographer's portfolio.</p>
             </a>
         </div>
     </main>
