--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
     <main>
         <div class="landing">
             <h1 class="name">Kenneth Lu Diaz</h1>
-            <button class="landing-btn">></button>
             <section class="landing-info">
-                <p class="text-1"></p>
+                <p class="landing-text">I am currently a junior Computer Science student attending the University of Rhode Island. My main interest is Web Development, and I wish to become a full-stack engineer. My core values revolve around good craftsmanship and ethical work. In addition to English, I can also speak and write in Spanish and Japanese.</p>
             </section>
+            <button class="landing-btn">></button>
         </div>
         <div class="portfolio">
             <h2 class="portfolio-title">
