Finished first draft

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
     <link rel="stylesheet" href="styles/main.css">
-    <script src="" defer></script>
+    <script src="index.js" defer></script>
 
     <meta name="description" content="">
     <meta name="og:description" content="">
@@ -47,7 +47,7 @@
     <main>
         <div class="landing">
             <h1 class="name">Kenneth Lu Diaz</h1>
-            <section class="landing-info">
+            <section class="landing-info-off">
                 <p class="landing-text">I am currently a junior Computer Science student attending the University of Rhode Island. My main interest is Web Development, and I wish to become a full-stack engineer. My core values revolve around good craftsmanship and ethical work. In addition to English, I can also speak and write in Spanish and Japanese.</p>
             </section>
             <button class="landing-btn">></button>
